--- a/src/components/OurPlans.css
+++ b/src/components/OurPlans.css
@@ -29,6 +29,11 @@ margin-bottom: 20px;
     margin-bottom: 20px;
     color: rgb(90, 90, 90);
 }
+.ourplans-card h2{
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgb(90, 90, 90);
+}
 .ourplans-card ul{
     list-style-type: none;
     color: rgb(90, 90, 90);
