--- a/src/components/ScrollCards.css
+++ b/src/components/ScrollCards.css
@@ -64,7 +64,7 @@ text-decoration: none;
  /* transition: all 0.5s ease; */
 }
 .scrollcard.three{
-    background: url("../assets/img/hostingcard.jpg");
+    background: url("../assets/img/wengang-zhai-qspcUHykVNk-unsplash.jpg");
     background-position: center;
     background-size: cover;
     width: 100%;
