--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -9,7 +9,7 @@
   .about-bg-img{
       position: relative;
       background: url("../assets/img/annie-spratt-QckxruozjRg-unsplash.jpg");
-      filter: brightness(0.7);
+      /* filter: brightness(0.7); */
       height: 480px;
      width: 100%;
       background-position: 0 -100px;
@@ -28,19 +28,22 @@
 /* front text */
 .about-front-text{
     position: absolute;
-    bottom: 150px;
-    right: 100px;
+    top: 80%;
+      left: 50%;
+      transform: translate(-50%,-50%);
     text-align: right;
     font-size: 1.5em;
     line-height: 1.3;
-    color: white;
+    /* color: white; */
   }
   .about-front-text h1{
     font-weight: 300;
+    color: white;
+    text-shadow: 0 0 10px black;
   }
-  .about-front-text h1:nth-child(1){
+  /* .about-front-text h1:nth-child(1){
   color:var(--blue) ;
-  }
+  } */
 
 .aboutus-content h1{
     text-align: center;
@@ -49,7 +52,7 @@
 }
 .aboutus-content p{
     width: 90%;
-    margin: 0 auto;
+    margin: 10px auto;
     font-size: 1.5em;
     text-align: center;
     line-height: 1.5em;
@@ -116,4 +119,28 @@
     color: white;
     margin-bottom: 10px;
     text-shadow: 0 0 10px rgb(53, 53, 53);
+}
+
+@media (max-width:480px) {
+  .aboutus-content p{
+    font-size: 1.2em;
+  }
+  .aboutus-cards{
+    flex-direction: column;
+  }
+  .aboutus-cards-img{
+    width: 100%;
+  }
+  .aboutus-cards-content{
+    width: 100%;
+  }
+  .promote p{
+    font-size: 1.2em;
+  }
+  .offer p{
+    font-size: 1.2em;
+  }
+  /* .about-bg-img{
+    filter: brightness(1);
+  } */
 }
