--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -18,6 +18,21 @@
       background-attachment: fixed;
       /* mix-blend-mode: normal; */
   }
+  .contact-front-text{
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: right;
+    font-size: 1.5em;
+    line-height: 1.3;
+    color: white;
+  }
+  .contact-front-text h1{
+    font-weight: 300;
+    color: white;
+    text-shadow: 0 0 10px black;
+}
 .contactpage h1{
     text-align: center;
     padding: 10px;
@@ -164,5 +179,48 @@ padding: 10px;
 .contact-form-button button:hover{
     background: #37b0d4;
     color: white;
- 
+}
+
+/* responsive */
+@media (max-width:480px) {
+    .contact-bg-img{
+        background-position: center;
+        background-size: cover;
+    }
+    .contact-front-text{
+        width: 100%;
+        font-size: 1.2em;
+    }
+    .contact-info{
+        flex-direction: column;
+    }
+    .contact-address{
+        width: 100%;
+    }
+    .contact-form{
+        margin-top: 20px;
+        width: 100%;
+    }
+    .contact-form-form form{
+        width: 100%;
+    }
+    .contact-form-form .contact-form-name, .contact-form-form .contact-form-mail, .contact-form-form .contact-form-phone, .contact-form-form .contact-form-message{
+        justify-content: space-between;
+    }
+    .contact-form-form form label{
+        font-size: 1.2em;
+    }
+    .contact-form-form form input, .contact-form-form form textarea{
+        font-size: 1.2em;
+    }
+    .contact-form-message textarea{
+        height: 100px;
+    }
+    .contact-form-button{
+        left: 50%;
+    }
+    .contact-form-button button{
+        font-size: 1.2em;
+        padding: 10px 30px;
+    }
 }
