--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -5,19 +5,10 @@
   
   .logo img{
     margin-left: 30px;
-    height: 100px;
-    width: 300px;
-    object-fit: contain;
+    height: 150px;
+    width: 250px;
+    object-fit: cover;
   }
-  /* .bg-img .logo img{
-    width: 100%;
-    height: 100px;
-  } */
-  /* header {
-      border: 1px solid red;
-      background: transparent;
-      z-index: 100;
-  } */
    nav{
       display: flex;
       justify-content: space-between;
@@ -26,11 +17,12 @@
       top: 0;
       width: 100%;
       z-index: 100;
+      /* background-color: rgba(0, 0, 0, 0.062); */
   }
   nav .nav-menu{
       /* border: 1px solid blue; */
       height: 40px;
-      /* margin-right: 100px; */
+      margin-right: 90px;
       display: flex;
       align-items: center;
   }
@@ -55,10 +47,6 @@
   nav .nav-menu .icon{
     /* display: none; */
   }
-  
-
-  
-  
   /* Dropdown Button */
   .dropbtn {
       /* background-color: #4CAF50; */
@@ -128,6 +116,7 @@
       nav .nav-menu{
         flex-direction: column;
         width: 100%;
+        margin-right: 0;
         /* position: relative; */
       }
       nav .nav-menu ul{
