--- a/src/components/packages/WebHosting.css
+++ b/src/components/packages/WebHosting.css
@@ -92,6 +92,7 @@
     .webhosting-card ul li::before{
         content: '\2713';
         margin-right: 5px;
+        color:  #3dd0fe;
     }
 
     @media (max-width:480px){
